--- a/TA/fds_sp25/lesson1/index.html
+++ b/TA/fds_sp25/lesson1/index.html
@@ -2057,8 +2057,8 @@
 
 <h3 id="_1">课堂内容</h3>
 <p>本节的重点在于记住四个渐进符号：<span class="arithmatex">\(\Theta\)</span>、<span class="arithmatex">\(O\)</span>、<span class="arithmatex">\(\Omega\)</span>、<span class="arithmatex">\(\omega\)</span>。这四位最常用的其实是<span class="arithmatex">\(O\)</span>，不知道大家有没有从作业里发现。</p>
-<p>本节课的其他内容其实不太需要记，运算规则怎么理解呢？记住一句话，高阶占优，有点类似短板效应，但是是反过来的，谁"阶数"更高，运行时间就更长，就是主要贡献的。</p>
-<p>所谓的阶数：$n!\ &gt; $ 指数级(<span class="arithmatex">\(k^n\)</span>) <span class="arithmatex">\(&gt; n^k\)</span> &gt; $logn $ ，其中<span class="arithmatex">\(k\)</span>为任意常数。</p>
+<p>本节课的其他内容其实不太需要记，运算规则怎么理解呢？记住一句话，高阶占优，有点类似短板效应，但是是反过来的，谁"阶数"更高，运行时间就更长，就是主要贡献运行时长的。</p>
+<p>所谓的阶数：<span class="arithmatex">\(n!\ &gt;\)</span> 指数级(<span class="arithmatex">\(k^n\)</span>) <span class="arithmatex">\(&gt; n^k\)</span> &gt; <span class="arithmatex">\(logn\)</span> ，其中<span class="arithmatex">\(k\)</span>为任意常数。</p>
 <h3 id="_2">作业题</h3>
 <p>将在完成时间结束后更新。</p>
 
