--- a/about/index.html
+++ b/about/index.html
@@ -2450,17 +2450,16 @@
     <button class="button" onclick="toggleContent()" title = "Click to see more about me">
         <img src="../img/Dremig.jpg" alt="Button Image">  
     </button>
-    <span>awa Dremig desu~ yoroshiku!</span>
+    <span>青い春なんてもんは，僕には似合わないんだ</span>
 </div>
 
 <ul>
+  <li>Dremig</li>
   <li>浙江大学竺可桢学院图灵班，专业方向为计算机科学与技术，但热衷于探索一切计算机相关的内容</li>
-  <li>业余CTFer，浙江大学网络安全与攻防战队AAA队员，主要方向：misc</li>
+  <li>业余CTFer，浙江大学网络安全与攻防战队<a href="https://ctftime.org/team/194222">AAA</a>队员，主要方向：misc</li>
   <li>Member of <a href = "https://ctftime.org/team/406719">結束バンド</a></li>
-  <li>Maybe：2027 网络空间安全 本博贯通</li>
+  <li>Maybe：2027 浙江大学 网络空间安全 博士研究生</li>
   <li>欢迎和我交流任何有关计算机的内容<del>单纯聊聊天也行</del></li>
-  <li><ul>Want to contact with me?
-    <br><li>QQ: 1466140007</li></ul></li>
 </ul>
 
 <ul id="moreContent" style="display:none;">
@@ -2469,9 +2468,7 @@
     <li>沙盒类：Minecraft、Terraria、饥荒</li>
     <li>FPS类：Valorant、CSGO</li>
     <li>部分音游<del>BanG Dream!</del></li>
-    <li>某些Gal</li>
     <li>Maybe more...</li>
-    <li>不嫌弃的话欢迎一起<del>当然菜的发指就是了</del></li>
    </ul>   
   </li>
   <li>轻度番剧爱好者，比较喜欢的题材包括校园恋爱轻喜剧、少女乐队
@@ -2481,10 +2478,18 @@
   </ul></li>
   <li>轻度短视频沉迷，希望戒戒瘾</li>
   <li><del>羽毛球、乒乓球</del>冷知识，Dremig不是已投从来不运动的注</li>
-  <li><a href = "https://c6.y.qq.com/base/fcgi-bin/u?__=OAdCJ83JzUBZ">轻音乐</a>、<a href="https://c6.y.qq.com/base/fcgi-bin/u?__=vBMp1NhJzgPK">日语</a>、中文流行歌</li>
-  <li>其他马甲：Dr3m19、Dr3、91m3rd</li>
+  <li><a href = "常轨脱离Creative">我的很杂的什么都有的歌单</a></li>
   <li>INTP</li>
-  <li>Poor in English😭</li>
+    <li>头像是和泉妃爱，来自游戏<a href="https://mzh.moegirl.org.cn/常轨脱离Creative">常轨脱离Creative</a>
+      <ul>
+      <li><del>从这里就可以看出我很希望富婆来包养我了</del></li> 
+      </ul>
+    </li>
+  <li>Want to contact with me?
+    <ul>
+    <li>QQ: 1466140007</li>
+    </ul>
+  </li>
 </ul>
 
 <script>
