--- a/friend/index.html
+++ b/friend/index.html
@@ -2462,7 +2462,7 @@
                 <p>Only when the sky eclipse shall we unveil the starry night.</p>
             </div>
         </a>
-        <a class="link-block" href="http://13.250.14.141/">
+        <a class="link-block" href="http://wuy4n.com/">
             <img src="../img/WuYan.png" alt="WuYan">
             <div class="link-content">
                 <strong>WuYan</strong>
